file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_BINARY_DIR})

add_subdirectory(./GUIGuide)
add_subdirectory(./Environnement)
add_subdirectory(./UsersGuide)
add_subdirectory(./ImplementersGuide)
add_subdirectory(./DeveloppersGuide)
add_subdirectory(./Components)
add_subdirectory(./Interpolator)
